# manual-memory-pool-allocator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  notes.txt
.cache/clangd/index/: allocator.cpp.22ED7478548B191A.idx  allocator_test.cpp.06B00A68CC2CF8CA.idx  main.cpp.EB3F12E7FA6F86A1.idx
src/: allocator.cpp  allocator.hpp  main.cpp
tests/: allocator_test.cpp
